# napi-fib-rs

./: .gitignore  Cargo.toml  fib.test.js  jest.config.js  package-lock.json  package.json
src/: lib.rs
