[package]
name = "fib"
version = "0.1.0"
authors = ["masinc <masinc000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type= ["cdylib"]

[dependencies]
napi = "0.5.1"
napi-derive="0.5.1"

[build-dependencies]
napi-build="0.2.1"
